; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_handle_pragma_macro.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_handle_pragma_macro.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }

@TSTRING = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [43 x i8] c"_Pragma takes a string literal, but got %s\00", align 1
@TNUMBER = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*)* @handle_pragma_macro to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_pragma_macro(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %4 = call i32 @expect(i8 signext 40)
  %5 = call %struct.TYPE_8__* (...) @read_token()
  store %struct.TYPE_8__* %5, %struct.TYPE_8__** %3, align 8
  %6 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @TSTRING, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %14 = call i32 @tok2s(%struct.TYPE_8__* %13)
  %15 = call i32 @errort(%struct.TYPE_8__* %12, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %11, %1
  %17 = call i32 @expect(i8 signext 41)
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %19 = call i32 @parse_pragma_operand(%struct.TYPE_8__* %18)
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %21 = load i32, i32* @TNUMBER, align 4
  %22 = call i32 @make_token_pushback(%struct.TYPE_8__* %20, i32 %21, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @expect(i8 signext) #1

declare dso_local %struct.TYPE_8__* @read_token(...) #1

declare dso_local i32 @errort(%struct.TYPE_8__*, i8*, i32) #1

declare dso_local i32 @tok2s(%struct.TYPE_8__*) #1

declare dso_local i32 @parse_pragma_operand(%struct.TYPE_8__*) #1

declare dso_local i32 @make_token_pushback(%struct.TYPE_8__*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
